Minor CSS fixes - Fix a flickering issue with module headers - Better formatting in error modal
PiperOrigin-RevId: 390011807

--- a/lit_nlp/client/core/widget.css
+++ b/lit_nlp/client/core/widget.css
@@ -37,7 +37,7 @@
 }
 
 .header {
-  height: var(--lit-widget-header-height);
+  min-height: var(--lit-widget-header-height);
   color: rgb(32, 33, 36);
   line-height: 16pt;
   display: flex;
